; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bhnd/nvram/extr_bhnd_nvram_value_fmts.c_bhnd_nvram_val_bcm_macaddr_filter.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bhnd/nvram/extr_bhnd_nvram_value_fmts.c_bhnd_nvram_val_bcm_macaddr_filter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@bhnd_nvram_val_bcm_macaddr_string_fmt = common dso_local global i32 0, align 4
@EFTYPE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**, i8*, i64, i32)* @bhnd_nvram_val_bcm_macaddr_filter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bhnd_nvram_val_bcm_macaddr_filter(i32** %0, i8* %1, i64 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32**, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store i32** %0, i32*** %6, align 8
  store i8* %1, i8** %7, align 8
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  %10 = load i32, i32* %9, align 4
  switch i32 %10, label %14 [
    i32 128, label %11
    i32 129, label %12
  ]

11:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %16

12:                                               ; preds = %4
  %13 = load i32**, i32*** %6, align 8
  store i32* @bhnd_nvram_val_bcm_macaddr_string_fmt, i32** %13, align 8
  store i32 0, i32* %5, align 4
  br label %16

14:                                               ; preds = %4
  %15 = load i32, i32* @EFTYPE, align 4
  store i32 %15, i32* %5, align 4
  br label %16

16:                                               ; preds = %14, %12, %11
  %17 = load i32, i32* %5, align 4
  ret i32 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
